# Sudoku-Solver

./: README.md
PhotoOCRTraining/: .project  nndata.xml
PhotoOCRTraining/fonts/: allowed_fonts
PhotoOCRTraining/src/: FontChecker.java  FontManager.java  Generator.java  Main.java
PhotoOCRTraining/test/0/: 0
PhotoOCRTraining/test/1/: 1
PhotoOCRTraining/test/2/: 2
PhotoOCRTraining/test/3/: 3
PhotoOCRTraining/test/4/: 4
PhotoOCRTraining/test/5/: 5
PhotoOCRTraining/test/6/: 6
PhotoOCRTraining/test/7/: 7
PhotoOCRTraining/test/8/: 8
PhotoOCRTraining/test/9/: 9
PhotoOCRTraining/train/0/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+2460 more)
PhotoOCRTraining/train/1/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  1013  1014  1015  1016  1017  1018  1019  102  1020  1021  1022  1023  1024  1025  1026  1027  1028  1029  103  1030  1031  1032  (+2460 more)
PhotoOCRTraining/train/2/: 0  1  10  100  1000  1001  1002  1003  1004  1005  1006  1007  1008  1009  101  1010  1011  1012  (+2482 more)
Sudoku-Solver/: CMakeLists.txt  DigitRecognizer.h  GridExtractor.h  PuzzleCompleter.h  PuzzleExtractor.h  PuzzleReader.h  Solver.h  Utils.h  main.cpp
Sudoku-Solver.xcodeproj/: project.pbxproj
Sudoku-Solver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sudoku-Solver/cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake  sudoku
digits/: nndata.xml
(+17504 files in other folders)
