cmake_minimum_required( VERSION 3.0 )
project( Sudoku-Solver )
find_package( OpenCV REQUIRED )
add_executable( sudoku main.cpp )
target_link_libraries( sudoku ${OpenCV_LIBS} )
set_property(TARGET sudoku PROPERTY CXX_STANDARD 11)
set_property(TARGET sudoku PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET sudoku PROPERTY CMAKE_SYSTEM_NAME Linux)
